--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,278 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Khalid's Personal Website</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <div class="jumbotron text-center mt-5">
-            <h1 class="display-4">Hello, I am Khalid!</h1>
-            <p class="lead">Welcome to my personal website.</p>
-            <hr class="my-4">
-            <p>Click the button below to view my CV or test my web shop.</p>
-            <a class="btn btn-primary btn-lg" href="/cv" role="button">View My CV as a PDF</a>
-						<a class="btn btn-success btn-lg" href="/staticWebsite" role="button">View my CV as a Static Website</a>
-            <a class="btn btn-secondary btn-lg" href="/shop" role="button">Test My Web Shop</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Khalid</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700&display=swap"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+  </head>
+  <body>
+    <div class="main-container">
+      <div class="frame-1">
+        <div class="flex-row-ce">
+          <div class="smartphone"></div>
+          <span class="plus">+4917630118329</span>
         </div>
+        <div class="flex-row">
+          <span class="geburtstag">Geburtsjahr</span>
+          <div class="frame-2">
+            <div class="frame-3">
+              <div class="image"></div>
+            </div>
+          </div>
+          <span class="text-3">1993</span>
+          <div class="mail"></div>
+          <span class="email">khaledkh@gmx.de</span>
+          <span class="wohnort">Wohnort</span>
+          <span class="hannover">30163 Hannover</span>
+          <div class="vector"></div>
+          <span class="linkedin"
+            >https://www.linkedin.com/in/khalid93waleed/</span
+          >
+          <span class="name">Khalid Waleed Khalid</span>
+          <div class="vector-4"></div>
+          <span class="github">https://github.com/khalid93waleed93</span>
+          
+        </div>
+        <div class="flex-row-fc">
+          <div class="handwritten"></div>
+          <span class="full-stack-developer">Full-Stack Developer</span>
+          <div class="images"></div>
+          <span class="xing"
+            >https://www.xing.com/profile/KhalidWaleed_Khalid/</span
+          >
+        </div>
+      </div>
+      <div class="flex-row-ea">
+        <div class="frame-5">
+          <span class="education">Ausbildung/Studium/Weiterbildung</span>
+          <div class="flex-row-f">
+            <div class="ellipse"></div>
+            <span class="education-6">Ausbildung</span
+            ><span class="date-range">Aug. 2021 - Jun. 2024</span>
+          </div>
+          <div class="flex-row-e">
+            <div class="ellipse-7"></div>
+            <span class="umschulung">Umschulung</span
+            ><span class="date-range-8">Jan. 2021 - Jul. 2021</span>
+          </div>
+          <div class="flex-row-a">
+            <div class="ellipse-9"></div>
+            <span class="c-deutsch">C1 Deutsch</span
+            ><span class="date-range-a">Sep. 2016 - Dez. 2019</span>
+          </div>
+          <div class="flex-row-ed">
+            <div class="ellipse-b"></div>
+            <span class="bachelor">Bachelor</span
+            ><span class="date-range-c">Sep. 2011 - Jun. 2015</span>
+          </div>
+          <div class="flex-row-ce-d">
+            <div class="ellipse-e"></div>
+            <span class="fachhochschulreife">Fachhochschulreife</span
+            ><span class="date-range-f">Sep. 2008 - Jun. 2011</span>
+          </div>
+          <span class="bagdad">Bagdad</span><span class="skills">Skills</span>
+          <div class="flex-row-10">
+            <div class="image-11"></div>
+            <span class="nodejs">Nodejs:</span>
+          </div>
+          <div class="specific-skills">
+            <span class="specific-skills-12">Spezifische Kenntnisse:</span
+            ><span class="specific-skills-13">
+              Javascript, Typescript, Expressjs, MVC, Template Engine(Pug)
+            </span>
+            <br />
+            <span class="specific-skills-14">Gute Kenntnisse:</span
+            ><span class="good-skills">
+              ORM & ODM (Sequelize, Mongoose), RESTful API</span
+            >
+          </div>
+          <div class="flex-row-cd">
+            <div class="frame-15">
+              <div class="image-16"></div>
+            </div>
+            <span class="more-skills">More skills:</span>
+          </div>
+          <div class="flex-row-dc">
+            <div class="frame-17">
+              <div class="image-18"></div>
+            </div>
+            <span class="database">Database:</span>
+          </div>
+          <div class="database-skills">
+            <span class="good-knowledge">Gute Kenntnisse:</span
+            ><span class="sql-skills">
+              SQL (DDL, DQL, DML, DCL), Oracle SQL Developer<br /></span
+            ><span class="good-knowledge-19">Fortgeschrittene Kenntnisse:</span
+            ><span class="sql-skills-1a"> MongoDB(Compass, Cluster) </span>
+            <br />
+            <span class="good-knowledge-1b">Grundkenntnisse:</span
+            ><span class="other-database-skills">
+              Oracle Autonomous Database, MySql (Dbeaver), Postgersql, PgAdmin
+            </span>
+          </div>
+          <div class="flex-row-dcd">
+            <div class="devops">
+              <div class="image-1c"></div>
+            </div>
+            <span class="others">Others:</span>
+          </div>
+          <div class="others-skills">
+            <span class="good-knowledge-1d">Gute Kenntnisse:</span
+            ><span class="git-skills"> Git (Github, GitLab) </span>
+            <br />
+            <span class="advanced-knowledge">Fortgeschrittene Kenntnisse:</span
+            ><span class="git-skills-1e"> Google script, Plesk </span>
+            <br />
+            <span class="advanced-knowledge-1f">Grundkenntnisse:</span
+            ><span class="other-skills">
+              CI/CD, DockerFile, AWS(S3 & ec2), php, Wordpress</span
+            >
+          </div>
+          <div class="flex-row-e-20">
+            <div class="line"></div>
+            <span class="viscircle-gmbh">VisCircle GmbH</span>
+          </div>
+          <span class="fachinformatiker-anwendungsentwicklung">
+            Fachinformatiker - Anwendungsentwicklung</span
+          >
+          <div class="flex-row-eefe">
+            <div class="line-21"></div>
+            <span class="profil-gmbh">Profil GmbH</span>
+          </div>
+          <span class="fachinformatiker-abgebrochen">
+            Fachinformatiker (Abgebrochen)</span
+          >
+          <div class="flex-row-d">
+            <div class="line-22"></div>
+            <span class="versatile-roles">Vielseitige Berufsrollen </span>
+          </div>
+          <span class="multiple-german-courses">Mehrere Deutschkurse</span>
+          <div class="flex-row-fa">
+            <div class="line-23"></div>
+            <span class="university-of-baghdad">University of Baghdad</span>
+          </div>
+          <span class="petroleum-engineering">Petroleum Engineering</span
+          ><span class="reactjs">Reactjs:</span>
+          <div class="flex-row-24">
+            <div class="frame-25">
+              <div class="image-26"></div>
+            </div>
+            <div class="specific-skills-27">
+              <span class="specific-skills-28">Spezifische Kenntnisse:</span
+              ><span class="html-hooks">
+                HTML, HOOKS (useState, useEffect, useContext...) </span>
+              <br />
+              <span class="specific-skills-29">Gute Kenntnisse:</span
+              ><span class="fetch-api-css-threejs">
+                Fetch API ,Esbuild, CSS, Threejs</span
+              >
+            </div>
+          </div>
+          <div class="flex-row-2a">
+            <div class="frame-2b">
+              <div class="image-2c"></div>
+            </div>
+            <div class="good-skills-java">
+              <span class="good-skills-2d">Gute Kenntnisse:</span
+              ><span class="java"> Java </span>
+              <br />
+              <span class="good-skills-2e">Grundkenntnisse:</span
+              ><span class="gradle-springdatamongodb-hibernate">
+                Gradle, SpringDataMongoDB, Hibernate</span
+              >
+            </div>
+          </div>
+          <span class="spring-boot">Spring Boot:</span>
+          <div class="flex-row-b">
+            <div class="frame-2f">
+              <div class="image-30"></div>
+            </div>
+            <div class="advanced-skills-python">
+              <span class="advanced-skills">Fortgeschittene Kenntnisse:</span
+              ><span class="python3-rpi-gpio"> Python3, RPi.GPIO </span>
+              <br />
+              <span class="advanced-skills-31">Grundkenntnisse:</span
+              ><span class="grundkenntnisse">
+                Raspbian, Linux, Android Studio (XML & Kotlin)</span
+              >
+            </div>
+          </div>
+          <span class="systems-iot">Systems & IoT:</span>
+        </div>
+        <div class="frame-32">
+          <span class="uber-mich">Über mich</span>
+          <span class="uber-mich-33">
+            Als leidenschaftlicher Fullstack-Entwickler bringe ich eine
+            analytische Denkweise und eine tiefe Begeisterung für Automatisierung
+            in jedes Projekt ein. Ich genieße es, komplexe Probleme durch
+            Debugging zu lösen und setze dabei auf eine kollaborative
+            Herangehensweise, um Ideen und Lösungen mit Kollegen zu diskutieren.
+            Mein Engagement für ständige Verbesserung und mein Interesse an
+            neuesten Technologien treiben mich an, effiziente und innovative
+            Softwarelösungen zu entwickeln.</span
+          >
+          <span class="hobby">Hobby</span>
+          <span class="hobby-34">Mathe-Rätsel, Kochen, Wandern, Sport</span>
+        </div>
+        <div class="frame-35">
+          <span class="erfahrungen">Erfahrungen</span>
+          <div class="frame-36">
+            <span class="erfahrungen-37">August 2021 - Juni 2024</span>
+            <span class="erfahrungen-38">
+              Anwendungsentwickler in VisCircle GmbH</span
+            >
+            <span class="erfahrungen-39">Aufgaben:</span>
+            <span class="erfahrungen-3a">
+              Teilnahme an der Entwicklung eines 3D-Konfigurator mit React, der
+              die Systemeffizienz signifikant verbesserte.<br />Implementierte
+              Google Script und Drive API Lösungen zur Übertragung von
+              Eigentumsrechten zwischen Google Mail und Workspace, um Probleme
+              mit Google Drive zu überwinden.<br />Verwaltete einen WordPress
+              Webshop und bot Customer Support, wodurch die Benutzerzufriedenheit
+              und -bindung gesteigert wurde.</span
+            >
+          </div>
+          <div class="frame-3b">
+            <span class="erfahrungen-3c">Januar 2020 - Juni 2024</span>
+            <span class="erfahrungen-3d">
+              Schulprojekte<br />Nutzte Java, Spring Boot und MongoDB, um eine
+              Anwendung zur Erstellung und Lösung von Bastel-Kreuzworträtseln
+              mit komplexen Algorithmen für Rekursion und Backtracking zu
+              entwickeln. Die Anwendung ermöglicht Benutzern das interaktive
+              Basteln und Lösen von Rätseln.<br />Eigene Projekte<br />Entwickelte
+              mehrere CRUD-Anwendungen und einen Webshop mit Node.js und
+              Express, was fundierte Kenntnisse in der Entwicklung von
+              Webanwendungen unter Beweis stellt.</span
+            >
+          </div>
+          <span class="sprachkenntnisse">Sprachkenntnisse</span>
+          <span class="sprachkenntnisse-3e">Deutsch</span>
+          <div class="frame-3f">
+            <div class="rectangle"></div>
+          </div>
+          <span class="sprachkenntnisse-40">Englisch</span>
+          <div class="rectangle-41">
+            <div class="rectangle-42"></div>
+          </div>
+          <span class="sprachkenntnisse-43">Arabisch</span>
+          <div class="rectangle-44">
+            <div class="rectangle-45"></div>
+          </div>
+        </div>
+      </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
+  </body>
 </html>
