--- a/public/index.html
+++ b/public/index.html
@@ -218,29 +218,25 @@
             <div class="frame-41"><div class="rectangle-42"></div></div>
           </div>
           <div class="frame-43">
-            <span class="erfahrungen-weitere-skills"
-              >Erfahrungen & weitere Skills</span
-            ><span class="text-59"
-              >Ausbildung zum Fachinformatiker in Anwendungsentwicklung bei der
-              VisCircle GmbH<br />Vertiefte Kenntnisse in JavaScript, TypeScript,
-              React.js, Node.js, Express.js, SQL und MongoDB<br />Entwicklung
-              eines 3D-Konfigurators in React<br />Implementierung von Google
-              Script-Lösungen<br />Verwaltung eines WordPress-Webshops zur
-              Steigerung der Benutzerzufriedenheit<br />Anpassungen und
-              Problemuntersuchungen an einem nginx-Server mittels PLESK<br />Java-Erfahrung
-              in Backend-Anwendungen<br />Lösen algorithmischer Aufgaben und
-              Umgang mit komplexen Datenstrukturen<br />Erstellung von RESTful
-              APIs mit Spring Boot<br />Management von Abhängigkeiten und
-              Integration von Services<br />Erstellung eines Webshops mit
-              Authentifizierung, Produktverwaltung, Warenkorb, Bestellungen und
-              Stripe-Zahlungsintegration<br />Hosting von Anwendungen auf Oracle
-              Cloud- und AWS EC2-Instanzen mit S3-Speicher und SSL-Verbindung<br />Nutzung
-              von CI/CD für Deployment<br />Technisches Wissen und
-              Ingenieurshintergrund<br />Innovative und effiziente
-              Lösungsfindung<br />Freude an neuen Herausforderungen und Chancen in
-              der Technologiebranche</span
-            >
+            <span class="erfahrungen-weitere-skills">Erfahrungen & weitere Skills</span>
+            <ul class="text-59">
+              <li>Vertiefte Kenntnisse in TypeScript, React.js, Node.js, Express.js und MongoDB</li>
+              <li>Entwicklung eines 3D-Konfigurators in React</li>
+              <li>Google Apps Script-Lösungen</li>
+              <li>Verwaltung eines WordPress-Webshops zur Steigerung der Benutzerzufriedenheit</li>
+              <li>Anpassungen und Problemuntersuchungen an einem nginx-Server mittels PLESK</li>
+              <li>Java-Erfahrung in Backend-Anwendungen</li>
+              <li>Lösen algorithmischer Aufgaben und Umgang mit komplexen Datenstrukturen</li>
+              <li>Erstellung von RESTful APIs mit Spring</li>
+              <li>Management von Abhängigkeiten und Integration von Services</li>
+              <li>Erstellung eines Webshops mit Authentifizierung, Produktverwaltung, Warenkorb, Bestellungen und Stripe-Zahlungsintegration</li>
+              <li>Hosting von Anwendungen auf Oracle Cloud- und AWS EC2-Instanzen mit S3-Speicher und SSL-Verbindung</li>
+              <li>Nutzung von CI/CD für Deployment</li>
+              <li>Technisches Wissen und Ingenieurshintergrund</li>
+              <li>Innovative und effiziente Lösungsfindung</li>
+            </ul>
           </div>
+          
     </div>
     <div class="button-container">
       <a class="custom-button" target="_blank" href="https://khalid-cv.s3.eu-central-1.amazonaws.com/Khalid+CV+2024.pdf"> Download as PDF</a>
